@@ -45,7 +45,7 @@ if (isset($_GET["id_agente"])){
 	$id_agente = $_GET["id_agente"];
 	$query_gen='SELECT talerta_agente_modulo.alert_text, talerta_agente_modulo.id_alerta, talerta_agente_modulo.descripcion, talerta_agente_modulo.last_fired, talerta_agente_modulo.times_fired, tagente_modulo.nombre, talerta_agente_modulo.dis_max, talerta_agente_modulo.dis_min, talerta_agente_modulo.max_alerts, talerta_agente_modulo.time_threshold, talerta_agente_modulo.min_alerts, talerta_agente_modulo.id_agente_modulo, tagente_modulo.id_agente_modulo FROM tagente_modulo, talerta_agente_modulo WHERE tagente_modulo.id_agente = '.$id_agente.' AND tagente_modulo.id_agente_modulo = talerta_agente_modulo.id_agente_modulo ORDER BY tagente_modulo.nombre';
 	if ($result_gen=mysql_query($query_gen)){
-		echo "<table cellpadding='3' cellspacing='3' width=750 border=0>";
+		echo "<table cellpadding='4' cellspacing='4' width=750 border=0 class='databox'>";
 		echo "<tr><th>".$lang_label["type"]."<th>".$lang_label["name"]."</th><th>".$lang_label["description"]."</th><th>".$lang_label["min_max"]."</th><th>".$lang_label["time_threshold"]."</th><th>".$lang_label["last_fired"]."</th><th>".$lang_label["times_fired"]."</th><th>".$lang_label["status"]."</th>";
 		$color=1;
 		while ($data=mysql_fetch_array($result_gen)){
@@ -93,7 +93,7 @@ if (isset($_GET["id_agente"])){
 			else
 				echo "<td class='".$tdcolor."' align='center'><img src='images/dot_green.gif'>";
 		}
-		echo '<tr><td colspan="9"><div class="raya"></div></td></tr></table>';
+		echo '</table>';
 	}
 	else echo "<div class='nf'>".$lang_label["no_alerts"]."</div>";
 
